<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:layout_gravity="center"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_marginBottom="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bb"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_berat_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bb_field"
        android:inputType="numberDecimal"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tb"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_tinggi_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tb_field"
        android:inputType="numberDecimal"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usia"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_usia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usia_field"
        android:inputType="number"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jk"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rg_jenis_kelamin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <RadioButton
            android:id="@+id/rb_laki_laki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jk_pria"
            android:checked="true"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/rb_perempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jk_perempuan" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_hitung" />

</LinearLayout>