<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_result"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/tv_bmi_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:text="@string/bmi_result"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv_bfp_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:text="@string/bfp_result"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/tv_bmi_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:text="@string/bmi_category"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btn_info_pengembang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_info_pengembang"
        android:layout_marginBottom="32dp" />


</LinearLayout>